# ByteForge

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  ROADMAP.md
documents/: README.md  ROADMAP.md
engine/: CMakeLists.txt  README.md
engine/include/: ByteForgeEngine.h
engine/include/ByteForgeEngine/: ByteForgeApi.h  ByteForgeApplication.h
engine/source/: ByteForgeApplication.cpp
engine/source/Core/Configuration/: ConfigurationManager.cpp  ConfigurationManager.h  ConfigurationSchema.h
engine/source/Core/DataParsers/: IniParser.cpp  IniParser.h
engine/source/Core/Strings/: StringManipulation.cpp  StringManipulation.h  StringTypeConverter.cpp  StringTypeConverter.h
engine/source/Platform/: PlatformLayer.cpp  PlatformLayer.h
engine/source/Platform/Detection/: PlatformDetector.cpp  PlatformDetector.h  PlatformInfo.h
engine/source/Platform/IO/: FileSystem.cpp  FileSystem.h
engine/source/Platform/Window/: WindowManager.cpp  WindowManager.h
sandbox/: CMakeLists.txt  README.md  Sandbox.cpp
sandbox/Configuration/: PlatformSettings.ini
